fix: footer wrap in catalog.html and links hrefs

--- a/device/styles/styles.css
+++ b/device/styles/styles.css
@@ -191,7 +191,6 @@ li a:link {
 
 
 .logo {
-	display: block;
 	width: 145px;
 	margin-right: auto;
 }
